2000-12-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        Fix bugs reported by Theo Hopman:
	
	* src/set.c (set_logscale): "set logscale yz" bug fixed.

	* src/save.c (save_tics): xtics saveing fixed.

	* src/graph3d.c (do_3dplot): change incrementation of linetype for
 	contour lines. Fixes off-by-one bug between key sample and actual
 	line.

	* src/contour.c (calc_min_max): Don't logarithmize the ranges
 	another time.

2000-12-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c: fixed one missing 'postscript_gpoutfile = 0;' after
	a term->reset.

2000-12-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pm.trm src/os2/gclient.c: support for filled boxes (added
	PM_fillbox routine) --- it is used by the 'clear' command in multiplot
	mode to clear the subfigure area.

2000-12-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc: small change to docs about EEPIC driver
 	behaviour.

2000-12-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/eepic.trm: cleaned up some warnings and 'checkdoc' problems.

2000-12-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/eepic.trm: Gabriel Zachmann <zach@igd.fhg.de> added lots of
 	new options to the 'eepic' driver, and fixed some bux while at it.
	(EEPIC_PTS_PER_INCH): set to 72.27.
	(EEPIC_DOTS_PER_INCH): set to 600, and renamed from DOTS_PER_INCH.
	(eepic_color_on, eepic_true_rotate, fontsize_set): new variables.
	(eepic_num_point_types, eepic_pointsize, EEPIC_points): split up
 	into three lists for different point sizes.
	(eepic_numlines, EEPIC_lines): split up into three lists for
 	different 'line sets'.
	(EEPIC_NUM_COLORS, eepic_color, eepic_colors): new variables, for
 	colored output feature.
	(EEPIC_init): change initializers to new variables.
	(EEPIC_graphics): change fontsize setting method.
	(EEPIC_linetype): change linetype selection method; respect color.
	(EEPIC_point): change point output method to respect pointsize.